--- a/main.css
+++ b/main.css
@@ -13,9 +13,16 @@ body{
     height: 100%;
 }
 .container{
+    width: 50%;
     margin: 0 auto;
-    height: 100%;
+
 }
+/* .container {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 1000px;
+    height: 100%;
+  } */
 
 .nav{
     height: 3rem;
@@ -52,4 +59,42 @@ a:hover{
 
 table{
     border: 20px solid blue;
+
+    width: 100%;
 }
+th,td{
+    border: 1px solid green;
+}
+
+.cautare{
+    height: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-cautare label{
+    font-weight: bold;
+    margin-bottom: 1rem;
+    display: block;
+}
+
+.form-cautare input{
+    margin-bottom: 1rem;
+    display: block;
+    width: 100%;
+}
+
+.buton{
+    display: block;
+    margin: 0 auto;
+    border: 1px solid #0c66b4;
+    background-color: #0c66b4;
+    color:#fff;
+    padding: 0.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    font:inherit;
+    border-radius: 8px;
+}
+
