--- a/students.css
+++ b/students.css
@@ -1,8 +1,34 @@
-table{
-    border: 2px solid blue;
-
-    width: 100%;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
-th,td{
-    border: 1px solid green;
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 10rem;
+}
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 0.5rem;
+}
+
+#tabel_studenti tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#tabel_studenti th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #0c66b4;
+  color: white;
+}
+
+#container{
+    width: 50%;
+    margin: 0 auto;
+
 }
