am adaugat navbar peste tot

--- a/students.css
+++ b/students.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: Roboto, sans-serif;
 }
 
 table {
@@ -31,4 +32,37 @@ td {
     width: 50%;
     margin: 0 auto;
     
+}
+
+
+
+
+
+.nav{
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(to right,#20022a 0,#0c66b4 100%);
+  font-weight: 700;;
+}
+
+ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+ul li {
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 1rem;
+  padding: 1rem;
+}
+
+a:hover{
+  color: #0081ea;
 }
