--- a/students.css
+++ b/students.css
@@ -1,8 +1,8 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: Roboto, sans-serif;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: Roboto, sans-serif;
 }
 
 table {
@@ -28,26 +28,21 @@ td {
   color: white;
 }
 
-#container{
-    width: 50%;
-    margin: 0 auto;
-    
+#container {
+  width: 50%;
+  margin: 0 auto;
 }
 
-
-
-
-
-.nav{
+.nav {
   height: 3rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: linear-gradient(to right,#20022a 0,#0c66b4 100%);
-  font-weight: 700;;
+  background: linear-gradient(to right, #20022a 0, #0c66b4 100%);
+  font-weight: 700;
 }
 
-ul{
+ul {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,13 +51,13 @@ ul li {
   list-style-type: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: #fff;
   font-size: 1rem;
   padding: 1rem;
 }
 
-a:hover{
+a:hover {
   color: #0081ea;
 }
