--- a/note.css
+++ b/note.css
@@ -6,15 +6,16 @@
 }
 
 input {
+  width:100%;
   display: block;
-  padding: 0.75rem 0.75rem;
-  margin: 8px 0;
+  padding: 0.75rem 1rem;
+  margin: 8px 0px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
-input[type="submit"]:hover {
+#adauga:hover {
   background-color: #0081ea;
 }
 
@@ -27,6 +28,7 @@ input[type="submit"]:hover {
   border-radius: 0.25rem;
   cursor: pointer;
 }
+
 
 .container {
   width: 50%;
