--- a/delete_grades.css
+++ b/delete_grades.css
@@ -5,38 +5,36 @@
   font-family: Roboto, sans-serif;
 }
 
-input {
+table {
+  border-collapse: collapse;
   width: 100%;
-  display: block;
-  padding: 0.75rem 1rem;
-  margin: 8px 0px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+  margin-top: 10rem;
+}
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 0.5rem;
 }
 
-#adauga:hover {
-  background-color: #0081ea;
+#tabel_studenti tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 
-#adauga {
+#tabel_studenti th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
   background-color: #0c66b4;
   color: white;
-  padding: 0.6rem 1rem;
-  margin: 0.5rem 0;
-  border: none;
-  border-radius: 0.25rem;
-  cursor: pointer;
 }
 
-.container {
+#container {
   width: 50%;
   margin: 0 auto;
-  margin-top: 2rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav {
@@ -66,4 +64,15 @@ a {
 
 a:hover {
   color: #0081ea;
+}
+
+#deleteButton{
+  align-items: center;
+  background-color: #0c66b4;
+  color: white;
+  padding: 0.6rem 1rem;
+  margin: 0.5rem 0;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
 }
